Bug 1924087: Check language spoofing in SVG's switch element. r=tjr,longsonr

Differential Revision: https://phabricator.services.mozilla.com/D225358